codepattern/c/ca/log.clang/ca-02172.stderr
src/ca-02172.c:5:13: error: static declaration of 'bar' follows non-static declaration
static void bar(void)
            ^
src/ca-02172.c:3:13: note: previous declaration is here
extern void bar(void);
            ^
src/ca-02172.c:8:14: warning: unused parameter 'argc' [-Wunused-parameter]
int main(int argc, char **argv)
             ^
src/ca-02172.c:8:27: warning: unused parameter 'argv' [-Wunused-parameter]
int main(int argc, char **argv)
                          ^
2 warnings and 1 error generated.
